--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 node_modules/
 
 # Environment files
-*.env
+# backend
+backend/.env
+backend/node_modules/
+frontend/node_modules/
+
 
 # Logs
 npm-debug.log*
