--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://fiddle-tone-picker-backend.onrender.com/api/:path*"
+      "destination": "https://fiddle-tone-picker.onrender.com/api/:path*"
     }
   ],
   "headers": [
@@ -26,5 +26,10 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
